Add GET endpoint to management API
Makes sense to be able to inspect the current groups via the admin
API (so it is also present in the swagger page).

Currently we just reuse the data already collected for the already
existing /lock-status monitoring endpoint. Should be good enough for
now.
