# server/docs/swagger.json
@@ -18,6 +18,24 @@
     "basePath": "/api/v1",
     "paths": {
         "/groups": {
+            "get": {
+                "description": "Get the current available groups",
+                "tags": [
+                    "groups"
+                ],
+                "summary": "Get groups",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.apiError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Add a new FleetLock group",
                 "consumes": [
